adjust WCAG compliance, fix form to be more readable, added credits to bottom of page

--- a/main.css
+++ b/main.css
@@ -1,3 +1,25 @@
-.textContainer {
-    margin: 10px 0px 2px 0px;
+body {
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+footer {
+    position: fixed;
+    bottom: 20px;
+}
+.btnCustomizationContainer {
+    margin: 10px 50px 2px 50px;
+    width: 33vw;
+    float: left;
+}
+
+.canvasContainer {
+    margin: 0 auto;
+}
+
+.btnCustomizationContainer fieldset {
+    border: 2px solid black;
+}
+
+.widgetControls {
+    margin-top: 20px;
 }
